openshift/kustomize/kafka/kowl/base/deploy.yaml
---
# How the app will be deployed to the pod.
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kowl
  namespace: default
  annotations:
    description: Defines how to deploy Kowl
  labels:
    name: kowl
    part-of: tno
    version: 1.0.0
    component: kowl
    managed-by: kustomize
    created-by: jeremy.foster
spec:
  replicas: 1
  selector:
    matchLabels:
      name: kowl
      part-of: tno
      component: kowl
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      name: kowl
      labels:
        name: kowl
        part-of: tno
        component: kowl
    spec:
      volumes:
        - name: kowl-config
          configMap:
            name: kowl
            items:
              - key: config.yaml
                path: config.yaml
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: kowl
          image: bcgov-c4awhwfpcremdbga.azurecr.io/kowl:v1.5.0
          # image: 'image-registry.apps.silver.devops.gov.bc.ca/9b301c-tools/kafka:v1.5.0'
          # args:
          #   - --config.filepath=/etc/kowl/config.yaml
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: kowl-config
              mountPath: /etc/kowl
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              cpu: 50m
              memory: 150Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
