openshift/kustomize/kafka/kowl/base/route.yaml
# The route for the app.
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: kowl
  namespace: default
  annotations:
    # haproxy.router.openshift.io/rewrite-target: /
  labels:
    name: kowl
    part-of: tno
    version: 1.0.0
    component: kowl
    managed-by: kustomize
    created-by: jeremy.foster
spec:
  host: kowl-dev.apps.silver.devops.gov.bc.ca
  # path: /kowl
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
    # caCertificate: ""
    # certificate: ""
    # key: ""
  to:
    kind: Service
    name: kowl
    weight: 100
